// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot dark theme 1`] = `
<DocumentFragment>
  <main>
    <div
      class=""
    >
      <div>
        <div
          class="loader"
          style="z-index: -1; visibility: visible;"
        />
        <div
          style="position: relative; width: 1024px; height: 768px; cursor: grab; outline: none;"
          tabindex="0"
        >
          <div
            style="position: relative; width: 100%; height: 100%;"
          >
            <div
              class=""
              style="position: absolute; width: 100%; height: 100%; overflow: hidden; visibility: inherit;"
            />
            <div
              style="overflow: visible; height: 0px; width: 0px;"
            />
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1px; height: 1px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="side-panel-container"
          style="margin-left: 0px;"
        >
          <div
            class="side-panel"
            style="color: white; background: rgb(36, 39, 48);"
          >
            <div
              class="side-pane-header"
              style="margin-top: 2px; background: rgb(41, 50, 60);"
            >
              <h2>
                Nothing to show
              </h2>
            </div>
            <div>
              <button
                class="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj bk"
                data-baseweb="button"
              >
                Add data
              </button>
              <i
                class="fa fa-save"
                style="margin: 5px; cursor: pointer; font-size: 1.5em;"
              />
            </div>
            <div
              class="side-panel-body"
            >
              <div
                class="side-panel-body-content"
              >
                <br />
                <hr
                  style="clear: both;"
                />
                <div
                  class="bl"
                >
                  <div
                    aria-orientation="horizontal"
                    class="bm bn bo af bp bq br bs bt bu"
                    data-baseweb="tab-list"
                    role="tablist"
                  >
                    <button
                      aria-controls="tabs-bui1-tabpanel-0"
                      aria-selected="true"
                      class="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                      data-baseweb="tab"
                      id="tabs-bui1-tab-0"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <i
                        class="fa fa-info"
                        style="font-size: 2rem;"
                      />
                    </button>
                    <button
                      aria-controls="tabs-bui1-tabpanel-1"
                      aria-selected="false"
                      class="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                      data-baseweb="tab"
                      id="tabs-bui1-tab-1"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <i
                        class="fa fa-sliders"
                        style="font-size: 2rem;"
                      />
                    </button>
                    <div
                      aria-hidden="true"
                      class="c5 c6 c7 c8 c9 ca cb cc"
                      data-baseweb="tab-highlight"
                      role="presentation"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="bi bm ca"
                    data-baseweb="tab-border"
                    role="presentation"
                  />
                  <div
                    aria-labelledby="tabs-bui1-tab-0"
                    class="cd aq"
                    data-baseweb="tab-panel"
                    id="tabs-bui1-tabpanel-0"
                    role="tabpanel"
                  >
                    <div
                      class="side-panel-group"
                      style="border-color: #29323c;"
                    />
                  </div>
                  <div
                    aria-labelledby="tabs-bui1-tab-1"
                    class="cd aq"
                    data-baseweb="tab-panel"
                    hidden=""
                    id="tabs-bui1-tabpanel-1"
                    role="tabpanel"
                  />
                </div>
              </div>
              <div
                class="space"
              />
              <form
                class="search-form"
              >
                <div
                  class="ce cf"
                  data-baseweb="form-control-container"
                >
                  <div
                    class="bv bn cg ce ch ci cj ck cl cm cn co cp av cq bb bc b9 ba b5 cr cs ct cu cv cw cx cy cz d0"
                    data-baseweb="input"
                  >
                    <div
                      class="bn ce d1 av cq b5 cr cs ct bh cy"
                      data-baseweb="base-input"
                    >
                      <input
                        aria-invalid="false"
                        aria-required="false"
                        autocomplete="on"
                        class="bv d2 ai ak aj al am ao an ap aq ce d3 d4 d5 d6 bd be d7 d0 b5 cr cs ct bh d8 d9"
                        id="search-nominatum"
                        inputmode="text"
                        name=""
                        placeholder="fly to ..."
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bn ag ah da av cq b5 cr cs ct db dc bh cy"
                    >
                      🌐
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
          <div
            class="close-button"
            style="color: white;"
          >
            <div
              style="background-color: rgb(36, 39, 48);"
            >
              <i
                class="fa fa-arrow-circle-left"
                style="font-size: 2rem;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </main>
</DocumentFragment>
`;

exports[`App snapshot light theme 1`] = `
<DocumentFragment>
  <main>
    <div
      class=""
    >
      <div>
        <div
          class="loader"
          style="z-index: -1; visibility: visible;"
        />
        <div
          style="position: relative; width: 1024px; height: 768px; cursor: grab; outline: none;"
          tabindex="0"
        >
          <div
            style="position: relative; width: 100%; height: 100%;"
          >
            <div
              class=""
              style="position: absolute; width: 100%; height: 100%; overflow: hidden; visibility: inherit;"
            />
            <div
              style="overflow: visible; height: 0px; width: 0px;"
            />
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1px; height: 1px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="side-panel-container"
          style="margin-left: 0px;"
        >
          <div
            class="side-panel"
            style="color: black; background: white;"
          >
            <div
              class="side-pane-header"
              style="margin-top: 2px; background: rgb(238, 238, 238);"
            >
              <h2>
                Nothing to show
              </h2>
            </div>
            <div>
              <button
                class="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay dd de b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg df dg dh di"
                data-baseweb="button"
              >
                Add data
              </button>
              <i
                class="fa fa-save"
                style="margin: 5px; cursor: pointer; font-size: 1.5em;"
              />
            </div>
            <div
              class="side-panel-body"
            >
              <div
                class="side-panel-body-content"
              >
                <br />
                <hr
                  style="clear: both;"
                />
                <div
                  class="bl"
                >
                  <div
                    aria-orientation="horizontal"
                    class="bm bn bo af bp bq br bs bt bu"
                    data-baseweb="tab-list"
                    role="tablist"
                  >
                    <button
                      aria-controls="tabs-bui1-tabpanel-0"
                      aria-selected="true"
                      class="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap df dj au av aw aq c1 ay de dk c4 b5 b6 b7 b8 ah"
                      data-baseweb="tab"
                      id="tabs-bui1-tab-0"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <i
                        class="fa fa-info"
                        style="font-size: 2rem;"
                      />
                    </button>
                    <button
                      aria-controls="tabs-bui1-tabpanel-1"
                      aria-selected="false"
                      class="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap df dj au av aw aq c1 ay de dk c4 b5 b6 b7 b8 ah"
                      data-baseweb="tab"
                      id="tabs-bui1-tab-1"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <i
                        class="fa fa-sliders"
                        style="font-size: 2rem;"
                      />
                    </button>
                    <div
                      aria-hidden="true"
                      class="dl c6 c7 c8 c9 ca cb cc"
                      data-baseweb="tab-highlight"
                      role="presentation"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="c5 bm ca"
                    data-baseweb="tab-border"
                    role="presentation"
                  />
                  <div
                    aria-labelledby="tabs-bui1-tab-0"
                    class="cd aq"
                    data-baseweb="tab-panel"
                    id="tabs-bui1-tabpanel-0"
                    role="tabpanel"
                  >
                    <div
                      class="side-panel-group"
                      style="border-color: #eee;"
                    />
                  </div>
                  <div
                    aria-labelledby="tabs-bui1-tab-1"
                    class="cd aq"
                    data-baseweb="tab-panel"
                    hidden=""
                    id="tabs-bui1-tabpanel-1"
                    role="tabpanel"
                  />
                </div>
              </div>
              <div
                class="space"
              />
              <form
                class="search-form"
              >
                <div
                  class="ce cf"
                  data-baseweb="form-control-container"
                >
                  <div
                    class="bv bn cg ce ch ci cj ck cl cm cn co cp av cq bb bc b9 ba b5 cr cs ct dm dn do dp dg cz d0"
                    data-baseweb="input"
                  >
                    <div
                      class="bn ce d1 av cq b5 cr cs ct df dg"
                      data-baseweb="base-input"
                    >
                      <input
                        aria-invalid="false"
                        aria-required="false"
                        autocomplete="on"
                        class="bv d2 ai ak aj al am ao an ap aq ce d3 d4 d5 d6 bd be d7 d0 b5 cr cs ct df dq d9"
                        id="search-nominatum"
                        inputmode="text"
                        name=""
                        placeholder="fly to ..."
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bn ag ah da av cq b5 cr cs ct db dc df dg"
                    >
                      🌐
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
          <div
            class="close-button"
            style="color: white;"
          >
            <div
              style="background-color: rgb(36, 39, 48);"
            >
              <i
                class="fa fa-arrow-circle-left"
                style="font-size: 2rem;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </main>
</DocumentFragment>
`;
